--- a/GestionInventario/App.config
+++ b/GestionInventario/App.config
@@ -3,11 +3,8 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="GestionInventario.Properties.Settings.GestionInventarioConnectionString"
-            connectionString="Data Source=PC-ANDRES\SQLEXPRESS;Initial Catalog=GestionInventario;Integrated Security=True;Pooling=False"
-            providerName="System.Data.SqlClient" />
-        <add name="GestionInventario.Properties.Settings.GestionInventarioConnectionString1"
-            connectionString="Data Source=PC-ANDRES\SQLEXPRESS;Initial Catalog=GestionInventario;Integrated Security=True;Pooling=False"
+        <add name="GestionInventario.Properties.Settings.GestionInventarioEstaSiQueSi"
+            connectionString="Data Source=GERALD\SQLEXPRESS;Initial Catalog=GestionInventario;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
